--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "formik": "^2.2.9",
+    "framer": "^1.3.2",
     "framer-motion": "^4.1.17",
     "http-proxy-middleware": "^0.19.1",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
