--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.26.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
@@ -21,6 +22,8 @@
     "joi": "^17.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
