--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.12.0",
     "joi": "^17.4.0",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
