--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.2",
+    "socket.io-client": "^4.1.3",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
   },
