--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "socket.io": "^4.1.3"
   }
 }
