--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "uuid": "^8.3.2"
   }
 }
