--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "draft-js": "^0.11.7",
     "draftjs-utils": "^0.10.2",
+    "emoji-mart": "^3.0.1",
     "formik": "^2.2.9",
     "framer": "^1.3.2",
     "framer-motion": "^4.1.17",
