--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.2",
+    "react-visibility-sensor": "^5.1.1",
     "socket.io-client": "^4.1.3",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
